--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ numpy
 pandas
 spacy
 flask
-python_speech_features
-keras
-tensorflow
 normalise
-nltk
+python-speech-features==0.6
+nltk==3.6.2
+tensorflow==2.5.0
 scikit-learn==0.22
+Keras==2.4.3
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
