--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# personal folder
+# test file & folder
 embed/
+gmm_models/
+*.gmm
+test.json
+test.py
+test2.py
